updated password calculator notebook

--- a/SHA1 Password Calculator.ipynb
+++ b/SHA1 Password Calculator.ipynb
@@ -18,19 +18,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sha1:f87278df0a47:9bfbf10e9b48e91f6cd20d73c9f351ffd22c4d5c\n"
+     ]
+    }
+   ],
    "source": [
     "# replace the \"password\" string with your password\n",
     "# e.g. \n",
     "# password = \"myNewPassword\"\n",
+    "password = 'password'\n",
     "\n",
-    "\n",
-    "from IPython.lib import passwd()\n",
+    "from IPython.lib import passwd\n",
     "pwHash = passwd(password)\n",
-    "print(hex_dig)"
+    "print(pwHash)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
